fix: vertical list alignment

--- a/pages/blog/post-list.scss
+++ b/pages/blog/post-list.scss
@@ -5,6 +5,7 @@
 .post-list {
   list-style: none;
   padding: 0;
+  margin: 0;
 
   &__item {
     list-style: none;
